# CG_Trabs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt
include/: matrices.h  printMatrices.h
shaders/: closeGL.frag  closeGL.vert  main.vert  openGL.frag  openGL.vert  triangles.frag  triangles.vert
src/: main.cpp
src/GUI/: GUI.cpp  GUI.hpp
src/camera/: camera.cpp  camera.hpp
src/loader/: loader.cpp  loader.hpp
src/matrices/: matrices.h
src/render/: closeGL.cpp  closeGL.hpp  cube.cpp  cube.hpp  openGL.cpp  openGL.hpp  render.cpp  render.hpp
src/utils/: enums.hpp  matrices.cpp  matrices.hpp  printMatrices.cpp  printMatrices.hpp
